--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
+  <div class="container"
+    id="planner">
     <!-- Timeblocks go here -->
   </div>
 
