--- a/index.html
+++ b/index.html
@@ -20,9 +20,93 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container"
-    id="planner">
+
+  <div class="container">
     <!-- Timeblocks go here -->
+    <!-- Use Solid Style f0c7 for save icon-->
+    <!-- id=planner-->
+
+    <!-- class 9 am-->
+    <div class="input-group input-group-lg" data-hour="9">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form9" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 10 am-->
+    <div class="input-group input-group-lg" data-hour="10">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form10" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 11 am-->
+    <div class="input-group input-group-lg" data-hour="11">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form11" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 12 pm-->
+    <div class="input-group input-group-lg" data-hour="12">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form12" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 1 pm-->
+    <div class="input-group input-group-lg" data-hour="1">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form1" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 2 pm-->
+    <div class="input-group input-group-lg" data-hour="2">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form2" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 3 pm-->
+    <div class="input-group input-group-lg" data-hour="3">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form3" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 4 pm-->
+    <div class="input-group input-group-lg" data-hour="4">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form4" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
+    <!-- class 5 pm-->
+    <div class="input-group input-group-lg" data-hour="5">
+      <div class="input-group-prepend">
+        <span class="input-group-text time-block block1"></span>
+      </div>
+      <input type="text" class="form-control form5" aria-label="Large">
+      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
