set local storage on hour blocks

--- a/index.html
+++ b/index.html
@@ -21,89 +21,91 @@
     <p id="currentDay" class="lead"></p>
   </header>
 
-  <div class="container">
-    <!-- Timeblocks go here -->
+  <!-- Timeblocks go here -->
     <!-- Use Solid Style f0c7 for save icon-->
     <!-- id=planner-->
+  <div class="container">
+  
 
     <!-- class 9 am-->
-    <div class="input-group input-group-lg" data-hour="9">
+    <div class="input-group input-group-lg" id="hour9">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">9:00am </span>
       </div>
-      <input type="text" class="form-control form9" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
+      
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 10 am-->
-    <div class="input-group input-group-lg" data-hour="10">
+    <div class="input-group input-group-lg" id="hour10">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">10:00am </span>
       </div>
-      <input type="text" class="form-control form10" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 11 am-->
-    <div class="input-group input-group-lg" data-hour="11">
+    <div class="input-group input-group-lg" id="hour11">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">11:00am </span>
       </div>
-      <input type="text" class="form-control form11" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 12 pm-->
-    <div class="input-group input-group-lg" data-hour="12">
+    <div class="input-group input-group-lg" id="hour12">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">12:00pm </span>
       </div>
-      <input type="text" class="form-control form12" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 1 pm-->
-    <div class="input-group input-group-lg" data-hour="1">
+    <div class="input-group input-group-lg" id="hour1">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">1:00pm </span>
       </div>
-      <input type="text" class="form-control form1" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 2 pm-->
-    <div class="input-group input-group-lg" data-hour="2">
+    <div class="input-group input-group-lg" id="hour2">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">2:00pm </span>
       </div>
-      <input type="text" class="form-control form2" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 3 pm-->
-    <div class="input-group input-group-lg" data-hour="3">
+    <div class="input-group input-group-lg" id="hour3">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">3:00pm </span>
       </div>
-      <input type="text" class="form-control form3" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 4 pm-->
-    <div class="input-group input-group-lg" data-hour="4">
+    <div class="input-group input-group-lg" id="hour4">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">4:00pm </span>
       </div>
-      <input type="text" class="form-control form4" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
     <!-- class 5 pm-->
-    <div class="input-group input-group-lg" data-hour="5">
+    <div class="input-group input-group-lg" id="hour5">
       <div class="input-group-prepend">
-        <span class="input-group-text time-block block1"></span>
+        <span class="input-group-text">5:00pm </span>
       </div>
-      <input type="text" class="form-control form5" aria-label="Large">
+      <input type="text" class="form-control form" aria-label="Large">
       <button class="btn saveBtn"><i class="fas fa-save"></i></button>
     </div>
 
