corrected html to names for proper css styling

--- a/index.html
+++ b/index.html
@@ -22,93 +22,81 @@
   </header>
 
   <!-- Timeblocks go here -->
-    <!-- Use Solid Style f0c7 for save icon-->
-    <!-- id=planner-->
+  <!-- Use Solid Style f0c7 for save icon-->
+  <!-- id=planner-->
   <div class="container">
-  
-
     <!-- class 9 am-->
-    <div class="input-group input-group-lg" id="hour9">
-      <div class="input-group-prepend">
-        <span class="input-group-text">9:00am </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <div id="hour9" class="row time-block">
+      <div class="col-md-2 hour">9:00am</div>
+      <textarea class="col-md-9 description" id="hour9"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
     <!-- class 10 am-->
-    <div class="input-group input-group-lg" id="hour10">
-      <div class="input-group-prepend">
-        <span class="input-group-text">10:00am </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <div id="hour10" class="row time-block">
+      <div class="col-md-2 hour">10:00am</div>
+      <textarea class="col-md-9 description" id="hour10"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
     <!-- class 11 am-->
-    <div class="input-group input-group-lg" id="hour11">
-      <div class="input-group-prepend">
-        <span class="input-group-text">11:00am </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <div id="hour11" class="row time-block">
+      <div class="col-md-2 hour">11:00am</div>
+      <textarea class="col-md-9 description" id="hour11"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
     <!-- class 12 pm-->
-    <div class="input-group input-group-lg" id="hour12">
-      <div class="input-group-prepend">
-        <span class="input-group-text">12:00pm </span>
+    <div id="hour12" class="row time-block">
+      <div class="col-md-2 hour">12:00pm
       </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+      <textarea class="col-md-9 description" id="hour12"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
-    <!-- class 1 pm-->
-    <div class="input-group input-group-lg" id="hour1">
-      <div class="input-group-prepend">
-        <span class="input-group-text">1:00pm </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <!-- class 1 pm in military time-->
+    <div id="hour13" class="row time-block">
+      <div class="col-md-2 hour">1:00pm</div>
+      <textarea class="col-md-9 description" id="hour13"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
-    <!-- class 2 pm-->
-    <div class="input-group input-group-lg" id="hour2">
-      <div class="input-group-prepend">
-        <span class="input-group-text">2:00pm </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <!-- class 2 pm in military time-->
+    <div id="hour14" class="row time-block">
+      <div class="col-md-2 hour">2:00pm</div>
+      <textarea class="col-md-9 description" id="hour14"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
-    <!-- class 3 pm-->
-    <div class="input-group input-group-lg" id="hour3">
-      <div class="input-group-prepend">
-        <span class="input-group-text">3:00pm </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <!-- class 3 pm in military time-->
+    <div id="hour15" class="row time-block">
+      <div class="col-md-2 hour">3:00pm</div>
+      <textarea class="col-md-9 description" id="hour15"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
-    <!-- class 4 pm-->
-    <div class="input-group input-group-lg" id="hour4">
-      <div class="input-group-prepend">
-        <span class="input-group-text">4:00pm </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <!-- class 4 pm in military time-->
+    <div id="hour16" class="row time-block">
+      <div class="col-md-2 hour">4:00pm</div>
+      <textarea class="col-md-9 description" id="hour16"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
 
-    <!-- class 5 pm-->
-    <div class="input-group input-group-lg" id="hour5">
-      <div class="input-group-prepend">
-        <span class="input-group-text">5:00pm </span>
-      </div>
-      <input type="text" class="form-control form" aria-label="Large">
-      <button class="btn saveBtn"><i class="fas fa-save"></i></button>
+    <!-- class 5 pm in military time -->
+    <div id="hour17" class="row time-block">
+      <div class="col-md-2 hour">5:00pm</div>
+      <textarea class="col-md-9 description" id="hour17"></textarea>
+      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      </button>
     </div>
-
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
