--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     <!-- class 9 am-->
     <div id="hour9" class="row time-block">
       <div class="col-md-2 hour">9:00am</div>
-      <textarea class="col-md-9 description" id="hour9"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 10 am-->
     <div id="hour10" class="row time-block">
       <div class="col-md-2 hour">10:00am</div>
-      <textarea class="col-md-9 description" id="hour10"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 11 am-->
     <div id="hour11" class="row time-block">
       <div class="col-md-2 hour">11:00am</div>
-      <textarea class="col-md-9 description" id="hour11"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
@@ -53,48 +53,48 @@
     <div id="hour12" class="row time-block">
       <div class="col-md-2 hour">12:00pm
       </div>
-      <textarea class="col-md-9 description" id="hour12"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 1 pm in military time-->
     <div id="hour13" class="row time-block">
       <div class="col-md-2 hour">1:00pm</div>
-      <textarea class="col-md-9 description" id="hour13"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 2 pm in military time-->
     <div id="hour14" class="row time-block">
       <div class="col-md-2 hour">2:00pm</div>
-      <textarea class="col-md-9 description" id="hour14"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 3 pm in military time-->
     <div id="hour15" class="row time-block">
       <div class="col-md-2 hour">3:00pm</div>
-      <textarea class="col-md-9 description" id="hour15"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 4 pm in military time-->
     <div id="hour16" class="row time-block">
       <div class="col-md-2 hour">4:00pm</div>
-      <textarea class="col-md-9 description" id="hour16"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
 
     <!-- class 5 pm in military time -->
     <div id="hour17" class="row time-block">
       <div class="col-md-2 hour">5:00pm</div>
-      <textarea class="col-md-9 description" id="hour17"></textarea>
-      <button id=saveBtn class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
+      <textarea class="col-md-9 description"></textarea>
+      <button class="col-md-1 btn saveBtn"> <i class="fas fa-save"></i>
       </button>
     </div>
   </div>
